--- a/templates/show_create.jinja
+++ b/templates/show_create.jinja
@@ -4,8 +4,8 @@
 
 {% block content %}
 <form method="post" action="/post">
-    Author: <input type="text"><br>
-    Message: <textarea></textarea><br>
+    Author: <input type="text" name="author"><br>
+    Message: <textarea name="message"></textarea><br>
     <input type="submit">
 </form>
 {% endblock %}
