--- a/templates/show_posts.jinja
+++ b/templates/show_posts.jinja
@@ -18,5 +18,5 @@
         <p>No posts available.</p>
     {% endif %}
 
-    <a href="/post">Create a new post</a>
+    <a href="/post" class="button button-new">Create a new post</a>
 {% endblock %}
