--- a/templates/show_reply.jinja
+++ b/templates/show_reply.jinja
@@ -7,6 +7,6 @@
 <form method="post" action="/reply/{{ post_id }}">
     Author: <input type="text" name="author"><br>
     Message: <textarea name="message"></textarea><br>
-    <input type="submit">
+    <input type="submit" class="button button-new" value="Create Post">
 </form>
 {% endblock %}
