--- a/templates/base.jinja
+++ b/templates/base.jinja
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>{% block title %}Default Title{% endblock %}</title>
     <link rel="stylesheet" href="/assets/base.css">
+    <link rel="stylesheet" href="/assets/milligram.css">
 </head>
 
 <body>
