--- a/templates/base.jinja
+++ b/templates/base.jinja
@@ -3,14 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %}Default Title{% endblock %}</title>
+    <title>{{ config.title }} &middot; {% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="/assets/base.css">
     <link rel="stylesheet" href="/assets/milligram.css">
 </head>
 
 <body>
     <header>
-        <h1>Forum</h1>
+        <h1>{{ config.title }}</h1>
     </header>
     <main>
         {% block content %}Default content{% endblock %}
