fix: Convert milligram CSS to SCSS, iterate on CSS colors, add base_url config option
- Sporadic use of variables
- Copy some colors (work in progress) from hugo-theme-m10c [1]
- Add config to template context for all templates
- Reformat SCSS
- Minify both base.scss and milligram.scss

[1]: https://themes.gohugo.io/themes/hugo-theme-m10c/

--- a/assets/milligram.scss
+++ b/assets/milligram.scss
@@ -6,6 +6,11 @@
   * Licensed under the MIT license
  */
 
+$darker-color: #242930;
+$light-color: #afbac4;
+$base-color: #57cc8a;
+$hover-color: #ffffff;
+
 *,
 *:after,
 *:before {
@@ -18,7 +23,7 @@ html {
 }
 
 body {
-  color: #606c76;
+  color: $light-color;
   font-family: 'Roboto', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
   font-size: 1.6em;
   font-weight: 300;
@@ -42,10 +47,10 @@ button,
 input[type='button'],
 input[type='reset'],
 input[type='submit'] {
-  background-color: #9b4dca;
-  border: 0.1rem solid #9b4dca;
+  background-color: $base-color;
+  border: 0.1rem solid $base-color;
   border-radius: .4rem;
-  color: #fff;
+  color: $hover-color;
   cursor: pointer;
   display: inline-block;
   font-size: 1.1rem;
@@ -60,7 +65,8 @@ input[type='submit'] {
   white-space: nowrap;
 }
 
-.button:focus, .button:hover,
+.button:focus,
+.button:hover,
 button:focus,
 button:hover,
 input[type='button']:focus,
@@ -69,9 +75,9 @@ input[type='reset']:focus,
 input[type='reset']:hover,
 input[type='submit']:focus,
 input[type='submit']:hover {
-  background-color: #606c76;
-  border-color: #606c76;
-  color: #fff;
+  background-color: $hover-color;
+  border-color: $hover-color;
+  color: $base-color;
   outline: 0;
 }
 
@@ -84,7 +90,8 @@ input[type='submit'][disabled] {
   opacity: .5;
 }
 
-.button[disabled]:focus, .button[disabled]:hover,
+.button[disabled]:focus,
+.button[disabled]:hover,
 button[disabled]:focus,
 button[disabled]:hover,
 input[type='button'][disabled]:focus,
@@ -93,8 +100,8 @@ input[type='reset'][disabled]:focus,
 input[type='reset'][disabled]:hover,
 input[type='submit'][disabled]:focus,
 input[type='submit'][disabled]:hover {
-  background-color: #9b4dca;
-  border-color: #9b4dca;
+  background-color: $base-color;
+  border-color: $base-color;
 }
 
 .button.button-outline,
@@ -103,10 +110,11 @@ input[type='button'].button-outline,
 input[type='reset'].button-outline,
 input[type='submit'].button-outline {
   background-color: transparent;
-  color: #9b4dca;
+  color: $base-color;
 }
 
-.button.button-outline:focus, .button.button-outline:hover,
+.button.button-outline:focus,
+.button.button-outline:hover,
 button.button-outline:focus,
 button.button-outline:hover,
 input[type='button'].button-outline:focus,
@@ -116,11 +124,12 @@ input[type='reset'].button-outline:hover,
 input[type='submit'].button-outline:focus,
 input[type='submit'].button-outline:hover {
   background-color: transparent;
-  border-color: #606c76;
-  color: #606c76;
+  border-color: $hover-color;
+  color: $hover-color;
 }
 
-.button.button-outline[disabled]:focus, .button.button-outline[disabled]:hover,
+.button.button-outline[disabled]:focus,
+.button.button-outline[disabled]:hover,
 button.button-outline[disabled]:focus,
 button.button-outline[disabled]:hover,
 input[type='button'].button-outline[disabled]:focus,
@@ -130,7 +139,7 @@ input[type='reset'].button-outline[disabled]:hover,
 input[type='submit'].button-outline[disabled]:focus,
 input[type='submit'].button-outline[disabled]:hover {
   border-color: inherit;
-  color: #9b4dca;
+  color: $base-color;
 }
 
 .button.button-clear,
@@ -140,10 +149,11 @@ input[type='reset'].button-clear,
 input[type='submit'].button-clear {
   background-color: transparent;
   border-color: transparent;
-  color: #9b4dca;
+  color: $base-color;
 }
 
-.button.button-clear:focus, .button.button-clear:hover,
+.button.button-clear:focus,
+.button.button-clear:hover,
 button.button-clear:focus,
 button.button-clear:hover,
 input[type='button'].button-clear:focus,
@@ -154,10 +164,11 @@ input[type='submit'].button-clear:focus,
 input[type='submit'].button-clear:hover {
   background-color: transparent;
   border-color: transparent;
-  color: #606c76;
+  color: $hover-color;
 }
 
-.button.button-clear[disabled]:focus, .button.button-clear[disabled]:hover,
+.button.button-clear[disabled]:focus,
+.button.button-clear[disabled]:hover,
 button.button-clear[disabled]:focus,
 button.button-clear[disabled]:hover,
 input[type='button'].button-clear[disabled]:focus,
@@ -166,11 +177,11 @@ input[type='reset'].button-clear[disabled]:focus,
 input[type='reset'].button-clear[disabled]:hover,
 input[type='submit'].button-clear[disabled]:focus,
 input[type='submit'].button-clear[disabled]:hover {
-  color: #9b4dca;
+  color: $base-color;
 }
 
 code {
-  background: #f4f5f6;
+  background: $darker-color;
   border-radius: .4rem;
   font-size: 86%;
   margin: 0 .2rem;
@@ -179,12 +190,12 @@ code {
 }
 
 pre {
-  background: #f4f5f6;
-  border-left: 0.3rem solid #9b4dca;
+  background: $darker-color;
+  border-left: 0.3rem solid $base-color;
   overflow-y: hidden;
 }
 
-pre > code {
+pre>code {
   border-radius: 0;
   display: block;
   padding: 1rem 1.5rem;
@@ -240,7 +251,7 @@ input[type='week']:focus,
 input:not([type]):focus,
 textarea:focus,
 select:focus {
-  border-color: #9b4dca;
+  border-color: $base-color;
   outline: 0;
 }
 
@@ -305,7 +316,7 @@ input[type='radio'] {
   padding: 0;
 }
 
-.row.row-no-padding > .column {
+.row.row-no-padding>.column {
   padding: 0;
 }
 
@@ -353,7 +364,8 @@ input[type='radio'] {
   margin-left: 25%;
 }
 
-.row .column.column-offset-33, .row .column.column-offset-34 {
+.row .column.column-offset-33,
+.row .column.column-offset-34 {
   margin-left: 33.3333%;
 }
 
@@ -369,7 +381,8 @@ input[type='radio'] {
   margin-left: 60%;
 }
 
-.row .column.column-offset-66, .row .column.column-offset-67 {
+.row .column.column-offset-66,
+.row .column.column-offset-67 {
   margin-left: 66.6666%;
 }
 
@@ -400,7 +413,8 @@ input[type='radio'] {
   max-width: 25%;
 }
 
-.row .column.column-33, .row .column.column-34 {
+.row .column.column-33,
+.row .column.column-34 {
   flex: 0 0 33.3333%;
   max-width: 33.3333%;
 }
@@ -420,7 +434,8 @@ input[type='radio'] {
   max-width: 60%;
 }
 
-.row .column.column-66, .row .column.column-67 {
+.row .column.column-66,
+.row .column.column-67 {
   flex: 0 0 66.6666%;
   max-width: 66.6666%;
 }
@@ -458,6 +473,7 @@ input[type='radio'] {
     margin-left: -1.0rem;
     width: calc(100% + 2.0rem);
   }
+
   .row .column {
     margin-bottom: inherit;
     padding: 0 1.0rem;
@@ -465,12 +481,13 @@ input[type='radio'] {
 }
 
 a {
-  color: #9b4dca;
+  color: $base-color;
   text-decoration: none;
 }
 
-a:focus, a:hover {
-  color: #606c76;
+a:focus,
+a:hover {
+  color: $hover-color;
 }
 
 dl,
@@ -577,7 +594,7 @@ h5,
 h6 {
   font-weight: 300;
   letter-spacing: -.1rem;
-  margin-bottom: 2.0rem;
+  margin-bottom: 0;
   margin-top: 0;
 }
 
