--- a/assets/base.scss
+++ b/assets/base.scss
@@ -1,8 +1,14 @@
+$darker-color: #242930;
+$light-color: #afbac4;
+$bg-color: #353b43;
+$base-color: #57cc8a;
+$hover-color: #ffffff;
+
 // Global Styles
 body {
     font-family: Arial, sans-serif;
-    background-color: #f8f8f8;
-    color: #333;
+    background-color: $bg-color;
+    color: $light-color;
     margin: 0;
     padding: 0;
     display: flex;
@@ -12,22 +18,15 @@ body {
 
 header {
     width: 100%;
-    background-color: #007BFF;
+    background-color: $darker-color;
     color: white;
     padding: 15px;
     text-align: center;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-
-    h1 {
-        margin: 0;
-        font-size: 1.8em;
-    }
 }
 
 main {
     width: 90%;
     max-width: 800px;
-    background: white;
     padding: 20px;
     margin: 20px auto;
     border-radius: 8px;
@@ -60,7 +59,6 @@ ul {
 }
 
 li {
-    background: white;
     padding: 10px;
     border-left: 3px solid #007BFF;
     border-radius: 5px;
@@ -72,19 +70,6 @@ li {
     margin-left: 20px;
     padding-left: 15px;
     border-left: 2px solid #ddd;
-}
-
-// Links
-a {
-    text-decoration: none;
-    color: #007BFF;
-    font-weight: bold;
-    transition: color 0.2s ease-in-out;
-
-    &:hover {
-        text-decoration: underline;
-        color: #0056b3;
-    }
 }
 
 // Buttons container: Align buttons in a row
